fixed minor layout issues

--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ h1 {
  margin: 20px auto;
  text-align: center;
  max-width: 1000px;
+ width: 90%;
 }
 a {
  text-decoration: none;
