--- a/poolstyles.css
+++ b/poolstyles.css
@@ -153,7 +153,7 @@ button {
 #colour-settings-form {
  display: grid;
  grid-template-columns: 1fr 1fr;
- grid-template-rows: 90% 10%;
+ grid-template-rows: 85% 15%;
  height: 100%;
 }
 #settings-1 {
