--- a/snookerstyles.css
+++ b/snookerstyles.css
@@ -10,6 +10,7 @@ html {
  background-attachment: fixed;
  color: white;
  font-family: "Inconsolata", monospace;
+ overflow: hidden;
 }
 button {
  margin: 10px auto;
@@ -48,7 +49,7 @@ h1 {
  justify-content: center;
  color: white;
  margin: 0px;
- padding: 10px;
+ padding: 10px 0;
  background-image: linear-gradient(to right, #204225, #2f6437);
  border-bottom: 1px solid white;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
@@ -66,9 +67,12 @@ body {
  justify-content: center;
  align-items: center;
 }
+#name-form-container {
+ width: 100%;
+}
 #name-form {
  width: 80%;
- margin: 0 auto;
+ margin: 20px auto;
  display: flex;
  flex-direction: column;
 }
@@ -81,6 +85,7 @@ label {
  margin-bottom: 10px;
  font-size: 25px;
  border-radius: 5px;
+ text-shadow: none;
 }
 #return-to-names {
  display: flex;
@@ -123,6 +128,7 @@ label {
  margin: 0;
  align-self: center;
  padding: 0 10px 0 10px;
+ overflow: hidden;
 }
 #frames-label {
  grid-column: 3;
